fixed spacing between index projects and mobile menu

--- a/src/components/UI/menuToggle.module.css
+++ b/src/components/UI/menuToggle.module.css
@@ -1,20 +1,17 @@
 
 
 .toggleWrap {
-    position: fixed; 
-    top: 32px;
-    right: 2rem;
-    width: 40px;
-    height: 40px;
+  
+  width: 40px;
+  height: 40px;
+  margin-bottom: auto;
+  z-index: 30;
 
-    margin-bottom: auto;
-    z-index: 30;
+  cursor: pointer;
 
-    cursor:pointer;
-
-    display: flex; 
-    flex-direction: column; 
-    justify-content: space-between;
+  display: flex; 
+  flex-direction: column; 
+  justify-content: space-between;
 }
 
 .toggleWrap > span {
@@ -74,6 +71,10 @@
   and (-webkit-min-device-pixel-ratio: 2) {
     .toggleWrap{
         margin-left: auto;
+        position:absolute;
+        bottom: 32px; 
+        right: 32px; 
+        border:1px solid pink;
     }
   }
 
