--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -703,6 +703,8 @@ pre tt:after {
   margin-top: 16px; 
   color: rgba(15,7,49,.75)
 }
+
+
 /* ----------- Desktop ----------- */
 
 @media only screen and (min-width: 768px){ 
@@ -710,6 +712,12 @@ pre tt:after {
     display: grid; 
     grid-template-columns: repeat(7, 1fr);
     grid-gap: 2rem;
+  }
+  .mobile-top {
+    display: none; 
+  }
+  .mobile-arrow {
+    display: none;
   }
 }
 
@@ -750,10 +758,20 @@ pre tt:after {
       width: 300px; 
     }
 
-    #headerWrap{
+    .mobile-top {
+      margin: 32px auto; 
+      font-size: 10px;
+      text-transform: uppercase;
+
+      text-align: center; 
 
     }
 
+    .mobile-arrow{
+      position: absolute;
+      bottom: 32px; 
+      left: 32px;
 
+    }
 
   }
